--- a/ana clara/index.html
+++ b/ana clara/index.html
@@ -1,74 +1,47 @@
-<style class="css"></style>
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aquecimento Global</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>Aquecimento Global</h1>
-        <img src="https://images.app.goo.gl/zjPYrvGQ6EsRbEer6" alt="Imagem de uma cidade do Rio Grande do Sul nas enchentes de 2024.">
-        <p>O aquecimento global é o aumento anormal da temperatura média do planeta registrado nos últimos anos. Esse fenômeno está diretamente relacionado às ações antrópicas (atividades do homem).</p>
-        <nav>
-            <ul>
-                <li><a href="#problemas">Os Problemas</a></li>
-                <li><a href="#consequencias">Consequências</a></li>
-                <li><a href="#conclusao">Conclusão</a></li>
-            </ul>
-        </nav>
-    </header>
-
-<!-- código omitido -->
- <!-- código omitido -->
-
-    <main>
-        <section id="problemas" class="conteudo">
-            <h2>Os Problemas</h2>
-            <article>
-                <h3>Elevação do nível do mar</h3>
-                <p>O derretimento das geleiras e calotas polares contribui para a elevação do nível do mar, ameaçando áreas costeiras e ilhas. </p>
-            </article>
-
-            <article>
-                <h3>Calor excessivo e ilhas de calor</h3>
-                <p>O aquecimento global intensifica eventos climáticos extremos, como furacões, secas, cheias e ondas de calor. </p>
-            </article>
-
-            <article>
-                <h3>Perda de biodiversidade</h3>
-                <p>O aumento das temperaturas e a alteração dos padrões climáticos afetam a vida vegetal e animal, levando à extinção de espécies e à perda de biodiversidade.</p>
-            </article>
-
-            <a href="https://youtu.be/XSHXOEoB8jk?si=Jv-1P7I91cUu1UC_" class="cta-button" target="_blank">Como impacta o mundo? <i class="fa-solid fa-arrow-up-right-from-square" style="color: var(--text-color);"></i></a>
-        </section>
-
-        <section id="consequencias" class="conteudo">
-            <h2>Consequências</h2>
-            <ul>
-                <li>Derretimento de calotas polares e aumento do nível do mar</li>
-                <li>Alterações climáticas</li>
-                <li>Perda da biodiversidade</li>
-                <li>Eventos climáticos extremos</li>
-                <li>Problemas de saúde</li>
-                <li>Segurança alimentar</li>
-            </ul>
-        </section>
-
-        <section id="conclusao" class="conteudo">
-            <h2>Conclusão</h2>
-            <p>O aquecimento global é uma consequência das mudanças climáticas, com impactos significativos em todo o planeta Todos podem ajudar a limitar as mudanças climáticas. Nós podemos fazer a diferença por meio da forma que nos locomovemos, do tipo de fonte energética que usamos e da comida que comemos..</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/ILh7nDEKGqc?si=feol6sZCHo1Cg-jQ" title="YouTube video.">
-        </section>
-
-    </main>
-
-    <footer>
-        <a href="https://www.linkedin.com/in/femascheti" class="cta-footer">Faça parte dessa causa!</a>
-        <p>2025 | @femascheti</p>
-    </footer>
+    
 </body>
 </html>
+<main>
+<main>
 
+    </main>
+    <footer>
+        <p>Projeto desenvolvido pela Alura, sem fins lucrativos.</p>
+    </footer>
+    <main>
+    <section id="container"> 
+
+</section>
+<article class="cartao">
+                <div class="cartao__conteudo">
+
+                </div>
+            </article>
+            <h3> Programação </h3>
+            <div class="cartao__conteudo__pergunta">
+O que é Java Script?
+</div>
+<div class="cartao__conteudo__resposta">
+O Java Script é uma linguagem de programação.
+</div>
+
+<article class="cartao">
+        <div class="cartao__conteudo">
+                <h3> Programação </h3>
+                      <div class="cartao__conteudo__pergunta">
+                            O que é CSS?
+                        </div>                        
+                       <div class="cartao__conteudo__resposta">
+                            O CSS é uma linguagem de estilização.
+                         </div>
+                        </div>
+                            
+         </article>
